
--------------------------------------------------------------------------------
Changes for 3.2.2rc1

New features:
........S. [ZBX-10694] added rollup health sensor item to vmware hypervisor template (wiper)
........S. [ZBXNEXT-2969] added support for suffixed and negative trigger function parameters (gleb)

Bug fixes:
A......... [ZBX-10842] fixed sql error when updating httptest with applicationid and without httpstepid parameters (Cemeris)
A......... [ZBX-10842] prevented disappearing of step items when updating httptest without applicationid, httpstepid parameters (Cemeris)  
A......... [ZBX-10842] fixed connecting web scenario applicationid to created steps when updating with API httptest.update mehtod (Cemeris)
..F....... [ZBX-9656] prevented updating comments for discovered triggers (Ivo)
..F....PS. [ZBX-11221] fixed MySQL connection issue by overriding user defined auto commit setting (Oleg, vso)
A......... [ZBX-11291] fixed LLD rule not validating "lifetime" field (Ivo)
..F....... [ZBX-11329] fixed host scripts pop-up menu not being displayed in Monitoring -> Problems section (Ivo)
..F....... [ZBX-11209] fixed visual bugs in various browsers (Pavel, Sasha)
..F....... [ZBX-10958] fixed displaying of user name for inaccessible users; fixed warnings in PHPUnit test; fixed undefined offsets in screen "Action logs" (Gunars)
A......... [ZBX-11091] fixed parsing of XML file which contains tag with attributes but without child tags; it could cause significant memeory leak (Sasha)
........S. [ZBX-10694] reverted hypervisor health status to HostSystem.overallStatus property (wiper)
..F....... [ZBX-11276] removed extra double quotes in host interface form (Gunars)
..F....... [ZBX-11256] synchronized the trigger wizzard form with trigger edit form changes (Gunars)
........S. [ZBX-11300] fixed variable used in forecast function (gleb)
A..G...... [ZBX-11146] fixed validation of item update interval 0 (Gunars, vso)